# UAP-ML-258

./: README.md  pyproject.toml  requirements.txt
src/: app.py  ft_transformer_model.h5  mlp_model.h5  scaler.pkl  tabnet_model.pkl
training_model/: UAP.ipynb
