[project]
name = "UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Iftitah", email = "iftitahy420@gmail.com"},
]
dependencies = ["streamlit>=1.52.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
